# isa2-messaging-profile-impl/src/main/java/eu/europa/ec/isa2/restapi/reader/utils/MessagingAPIResponseGenerator.java
@@ -3,10 +3,7 @@ package eu.europa.ec.isa2.restapi.reader.utils;
 import com.fasterxml.jackson.core.JsonParser;
 import eu.europa.ec.isa2.restapi.profile.annotation.MultipartPayload;
 import eu.europa.ec.isa2.restapi.profile.constants.MessagingConstants;
-import eu.europa.ec.isa2.restapi.profile.enums.APIProblemType;
-import eu.europa.ec.isa2.restapi.profile.enums.MessagingParameterLocationType;
-import eu.europa.ec.isa2.restapi.profile.enums.MessagingParameterType;
-import eu.europa.ec.isa2.restapi.profile.enums.MessagingReferenceType;
+import eu.europa.ec.isa2.restapi.profile.enums.*;
 import eu.europa.ec.isa2.restapi.profile.model.*;
 import eu.europa.ec.isa2.restapi.reader.enums.MessagingAPIDefinitionsLocation;
 import io.swagger.v3.core.converter.ModelConverters;
@@ -36,7 +33,6 @@ import static eu.europa.ec.isa2.restapi.profile.enums.MessagingParameterType.EDE
  * @author Joze Rihtarsic
  */
 public class MessagingAPIResponseGenerator {
-
 
 
     MessagingObjectPathUtils pathUtils = new MessagingObjectPathUtils();
@@ -72,7 +68,9 @@ public class MessagingAPIResponseGenerator {
         Content multipartContent = createMultipartContent(title, description, payloads);
         ApiResponse p = new ApiResponse().content(multipartContent);
         p.setDescription(description);
-        addCommonHeaders(p);
+        // always add headers for signal - that is Edel-Message-Sig
+        // the Original-Sender and Final recipient are added manually for pull and webhook endpoint!
+        addCommonHeaders(p, true);
         return p;
     }
 
@@ -83,21 +81,24 @@ public class MessagingAPIResponseGenerator {
         return p;
     }
 
-    public RequestBody createSignalMessageRequest() {
-        //
-        Content multipartContent = createSignalMessageContent(MESSAGE_ACCEPTED);
+    public RequestBody createSignalMessageRequest(APIProblemType messageType) {
+        //MESSAGE_ACCEPTED
+        Content multipartContent = createSignalMessageContent(messageType);
         RequestBody p = new RequestBody().content(multipartContent);
         return p;
     }
 
 
-    public void addCommonHeaders(ApiResponse response) {
+    public void addCommonHeaders(ApiResponse response, boolean headersForSignal) {
 
         List<MessagingParameterType> headerParameters = Arrays.asList(MessagingParameterType.values()).stream()
                 .filter(parameterType -> !parameterType.isPayloadPart()
                         && (parameterType.getLocation() == MessagingParameterLocationType.HEADER)
                         && !parameterType.isPayloadPart()
-                        && !parameterType.isWebhookParameters()).collect(Collectors.toList());
+                        && !parameterType.isWebhookParameters()
+                        && headersForSignal != parameterType.isUserMessageParameter()
+                        && parameterType.getMessagingParameterUsageType() != MessagingParameterUsageType.MESSAGE_REQUEST_ONLY
+                ).collect(Collectors.toList());
         for (MessagingParameterType parameterType : headerParameters) {
             response.addHeaderObject(parameterType.getName(), createMessagingHeaderForType(parameterType));
         }
@@ -158,15 +159,15 @@ public class MessagingAPIResponseGenerator {
      * @param parameterType - header type
      * @return
      */
-    protected Header createMessagingHeaderForType(MessagingParameterType parameterType) {
+    public Header createMessagingHeaderForType(MessagingParameterType parameterType) {
         Header header;
         String definitionURI = pathUtils.getDefinitionURI(messagingAPIDefinitionsLocation, parameterType.getMessagingReferenceType(),
-                MessagingConstants.OPENAPI_SUBPATH_HEADERS, messagingAPIURL );
+                MessagingConstants.OPENAPI_SUBPATH_HEADERS, messagingAPIURL);
         switch (messagingAPIDefinitionsLocation) {
             case DOCUMENT_COMPONENTS: {
-                if (!components.getHeaders().containsKey(parameterType.getName())) {
+                if (!components.getHeaders().containsKey(parameterType.getMessagingReferenceType().getName())) {
                     Header parameterSchema = createMessagingHeaderForTypePrivate(parameterType);
-                    components.getHeaders().put(parameterType.getName(), parameterSchema);
+                    components.getHeaders().put(parameterType.getMessagingReferenceType().getName(), parameterSchema);
                 }
             }
             // this part is common to DOCUMENT_COMPONENTS, MESSAGING_API_OBJECT and MESSAGING_API_COMPONENTS!
@@ -209,7 +210,7 @@ public class MessagingAPIResponseGenerator {
 
         Arrays.asList(APIProblemType.values()).stream()
                 .filter(problemType -> problemType.isError()
-                        && (includePullResponses || !problemType.isPullSpecific())
+                        && (includePullResponses == problemType.isPullSpecific())
                 )
                 .forEach(problemType -> {
                     ApiResponse response = responses.get(problemType.getStatus().toString());
@@ -255,12 +256,12 @@ public class MessagingAPIResponseGenerator {
 
         if (createReferencesForResponses) {
             if (!components.getResponses().containsKey(MessagingConstants.OPENAPI_SCHEMA_NAME_SIGNAL_MESSAGE)) {
-                ApiResponse response = createSignalResponsePrivate();
+                ApiResponse response = createSignalResponsePrivate(MESSAGE_ACCEPTED);
                 components.getResponses().put(MessagingConstants.OPENAPI_SCHEMA_NAME_SIGNAL_MESSAGE, response);
             }
             return new ApiResponse().$ref(MessagingConstants.OPENAPI_REF_PATH_REQUESTS + MessagingConstants.OPENAPI_SCHEMA_NAME_SIGNAL_MESSAGE);
         }
-        return createSignalResponsePrivate();
+        return createSignalResponsePrivate(MESSAGE_ACCEPTED);
     }
 
     public ApiResponse createMessageReferenceListResponse() {
@@ -275,11 +276,11 @@ public class MessagingAPIResponseGenerator {
         return createMessageResponseListPrivate();
     }
 
-    public ApiResponse createSignalResponsePrivate() {
-        Content apiTypeContent = createSignalMessageContent(MESSAGE_ACCEPTED);
+    public ApiResponse createSignalResponsePrivate(APIProblemType signalType) {
+        Content apiTypeContent = createSignalMessageContent(signalType == null ? MESSAGE_ACCEPTED : signalType);
         ApiResponse response = new ApiResponse().content(apiTypeContent);
         response.setDescription("Sent when the message is properly validated and received.");
-        addCommonHeaders(response);
+        addCommonHeaders(response, true);
         return response;
     }
 
@@ -292,16 +293,14 @@ public class MessagingAPIResponseGenerator {
         Schema schema = createMessagingApiSchemaDefinition(MessageReferenceListRO.class, MessagingReferenceType.MESSAGE_REFERENCE_LIST);
         MediaType mediaType = new MediaType().schema(schema)
                 .example(referenceListRO);
-        Content apiTypeContent = new Content().addMediaType(org.springframework.http.MediaType.APPLICATION_JSON_VALUE, mediaType);;
+        Content apiTypeContent = new Content().addMediaType(org.springframework.http.MediaType.APPLICATION_JSON_VALUE, mediaType);
+        ;
 
         ApiResponse response = new ApiResponse().content(apiTypeContent);
         response.setDescription("Message reference list");
-        addCommonHeaders(response);
+        addCommonHeaders(response, true);
         return response;
     }
-
-
-
 
 
     public Content createSignalMessageContent(APIProblemType problemType) {
@@ -316,25 +315,25 @@ public class MessagingAPIResponseGenerator {
                         "sha-256=eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ"
 
                 ));
-        return new Content().addMediaType(org.springframework.http.MediaType.APPLICATION_JSON_VALUE, mediaType);
+        return new Content().addMediaType(org.springframework.http.MediaType.APPLICATION_PROBLEM_JSON_VALUE, mediaType);
     }
 
 
     private Schema createMessagingApiSchemaDefinition(Class messagingApiClass, MessagingReferenceType referenceType) {
         Schema messagingApiSchema;
         String definitionURI = pathUtils.getDefinitionURI(messagingAPIDefinitionsLocation, referenceType,
-                MessagingConstants.OPENAPI_SUBPATH_SCHEMAS, messagingAPIURL );
-          switch (messagingAPIDefinitionsLocation) {
+                MessagingConstants.OPENAPI_SUBPATH_SCHEMAS, messagingAPIURL);
+        switch (messagingAPIDefinitionsLocation) {
             case DOCUMENT_COMPONENTS: {
                 if (!components.getSchemas().containsKey(referenceType.getName())) {
                     ResolvedSchema resolvedSchema = ModelConverters.getInstance().readAllAsResolvedSchema(messagingApiClass);
                     components.addSchemas(referenceType.getName(), resolvedSchema.schema);
                     // add referenced schemas
-                    resolvedSchema.referencedSchemas.forEach( (name, schema)->{
+                    resolvedSchema.referencedSchemas.forEach((name, schema) -> {
                         if (!components.getSchemas().containsKey(name)) {
                             components.addSchemas(name, schema);
                         }
-                    } );
+                    });
                 }
             }
             case MESSAGING_API_OBJECT:
@@ -350,11 +349,11 @@ public class MessagingAPIResponseGenerator {
                 // title is used to generate class by the swagger-codegen
                 messagingApiSchema.setTitle(referenceType.getName());
                 // add referenced schemas
-                resolvedSchema.referencedSchemas.forEach( (name, schema)->{
+                resolvedSchema.referencedSchemas.forEach((name, schema) -> {
                     if (!components.getSchemas().containsKey(name)) {
                         components.addSchemas(name, schema);
                     }
-                } );
+                });
 
         }
         return messagingApiSchema;
